[project]
name = "kiseki-backend"
version = "0.1.0"
description = "競馬予測指数システム - バックエンド"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "websockets>=13.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402", "E501", "N802", "N806", "B007", "B905", "F821", "F841", "F601", "I001", "A002"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
